EsqueceuSenha + RedefinirSenha + componentes

--- a/frontend_syncro/package.json
+++ b/frontend_syncro/package.json
@@ -37,6 +37,7 @@
   "eslintConfig": {
     "root": true,
     "env": {
+      "vue/setup-compiler-macros": true,
       "node": true
     },
     "extends": [
