integração do cadastro, ininio login e pasta hooks

--- a/frontend_syncro/package.json
+++ b/frontend_syncro/package.json
@@ -9,6 +9,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.11.0",
+    "axios-jwt": "^4.0.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-feather-icons": "^5.1.0",
