--- a/frontend_syncro/package.json
+++ b/frontend_syncro/package.json
@@ -26,6 +26,7 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -33,7 +34,9 @@
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
     "lint-staged": "^11.1.2",
-    "prettier": "^2.4.1"
+    "postcss": "^8.5.6",
+    "prettier": "^2.4.1",
+    "tailwindcss": "^3.4.17"
   },
   "eslintConfig": {
     "root": true,
