notificação ao criar grupo

--- a/frontend_syncro/package.json
+++ b/frontend_syncro/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.11.0",
     "axios-jwt": "^4.0.3",
     "core-js": "^3.45.0",
+    "mitt": "^3.0.1",
     "tailwind": "^4.0.0",
     "vue": "^3.2.13",
     "vue-feather-icons": "^5.1.0",
